src/objects/Transaction__c.object
<CustomObject>
    <fields>
        <fullName>ACS_Return_URL__c</fullName>
        <label>ACS Return URL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ACS_Url__c</fullName>
        <label>ACS Url</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Type_Description__c</fullName>
        <description>The value of the &lt;operation&gt;&lt;accounttypedescription&gt;&lt;/accounttypedescription&gt;&lt;/operation&gt; node from the Secure Trading response.</description>
        <label>Account Type Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acquirer_Response_Code__c</fullName>
        <description>The value of the &lt;acquirerresponsecode&gt;&lt;/acquirerresponsecode&gt; node from the Secure Trading response.</description>
        <label>Acquirer Response Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acquirer_Response_Message__c</fullName>
        <label>Acquirer Response Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auth_Code__c</fullName>
        <description>The value of the &lt;authcode&gt; node returned by Secure Trading.</description>
        <label>Auth Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Amount__c</fullName>
        <label>Billing - Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Currency_Code__c</fullName>
        <label>Billing - Currency Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_DCC_Enabled__c</fullName>
        <label>Billing - DCC Enabled</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Issuer_Country__c</fullName>
        <label>Billing - Issuer Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_PAN__c</fullName>
        <label>Billing - PAN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Payment_Type__c</fullName>
        <label>Billing - Payment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card__c</fullName>
        <label>Card</label>
        <referenceTo>Card__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <description>The value of the &lt;error&gt;&lt;code&gt;&lt;/code&gt;&lt;/error&gt; node from the Secure Trading response.</description>
        <label>Error - Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>The value of the &lt;error&gt;&lt;message&gt;&lt;/message&gt;&lt;/error&gt; node from the Secure Trading response.</description>
        <label>Error - Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MD_Index__c</fullName>
        <label>MD Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_Country_ISO__c</fullName>
        <label>Merchant Country ISO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_Name__c</fullName>
        <label>Merchant Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_Number__c</fullName>
        <label>Merchant Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_Order_Reference__c</fullName>
        <label>Merchant - Order Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Transaction_Reference__c</fullName>
        <description>The value of the &lt;operation&gt;&lt;parenttransactionreference&gt;&lt;/parenttransactionreference&gt;&lt;/operation&gt; node from the Secure Trading response.</description>
        <label>Parent Transaction Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pareq__c</fullName>
        <label>Pareq</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Reference__c</fullName>
        <description>The value of the &lt;requestreference&gt;&lt;/requestreference&gt; node from the Secure Trading response.</description>
        <label>Request Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Type__c</fullName>
        <description>The value of the &lt;responsetype&gt;&lt;/responsetype&gt; node from the Secure Trading response.</description>
        <label>Response Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secure_Trading_Response_Timestamp__c</fullName>
        <label>Secure Trading Response Timestamp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Address_Status_Code__c</fullName>
        <description>The status of the &lt;security&gt;&lt;address&gt;&lt;/address&gt;&lt;/security&gt; node returned from Secure Trading.</description>
        <label>Security - Address Status Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Address_Status__c</fullName>
        <formula>CASE( Security_Address_Status_Code__c , &quot;0&quot;, &quot;Not Given&quot;, &quot;1&quot;, &quot;Not Checked&quot;, &quot;2&quot;, &quot;Matched&quot;, &quot;4&quot;, &quot;Not Matched&quot;, null, &quot;&quot;, &quot;Unknown Code&quot;)</formula>
        <label>Security - Address Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Postcode_Status_Code__c</fullName>
        <description>The status of the &lt;security&gt;&lt;postcode&gt;&lt;/postcode&gt;&lt;/security&gt; node returned from Secure Trading.</description>
        <label>Security - Postcode Status Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Postcode_Status__c</fullName>
        <formula>CASE(  Security_Postcode_Status_Code__c  , &quot;0&quot;, &quot;Not Given&quot;, &quot;1&quot;, &quot;Not Checked&quot;, &quot;2&quot;, &quot;Matched&quot;, &quot;4&quot;, &quot;Not Matched&quot;, null, &quot;&quot;, &quot;Unknown Code&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Security - Postcode Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Security_Code_Status_Code__c</fullName>
        <description>The status of the &lt;security&gt;&lt;securitycode&gt;&lt;/securitycode&gt;&lt;/security&gt; node returned from Secure Trading.</description>
        <label>Security - Security Code Status Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Security_Code_Status__c</fullName>
        <formula>CASE(  Security_Security_Code_Status_Code__c , &quot;0&quot;, &quot;Not Given&quot;, &quot;1&quot;, &quot;Not Checked&quot;, &quot;2&quot;, &quot;Matched&quot;, &quot;4&quot;, &quot;Not Matched&quot;, null, &quot;&quot;, &quot;Unknown Code&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Security - Security Code Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Settle_Status__c</fullName>
        <formula>CASE(  Settlement_Settle_Status_Code__c , &quot;0&quot;, &quot;Pending Settlement&quot;, &quot;1&quot;, &quot;Pending Settlement, manually overridden&quot;, &quot;2&quot;, &quot;Suspended&quot;, &quot;3&quot;, &quot;Cancelled&quot;, &quot;10&quot;, &quot;Settling&quot;, &quot;100&quot;, &quot;Settled&quot;, null, &quot;&quot;, &quot;Unknown Code&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Settle Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Settlement_Settle_Due_Date__c</fullName>
        <description>The value of the &lt;settlement&gt;&lt;settleduedate&gt;&lt;/settleduedate&gt;&lt;/settlement&gt; node from the Secure Trading response.</description>
        <label>Settlement - Settle Due Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Settlement_Settle_Status_Code__c</fullName>
        <description>The value of the &lt;settlement&gt;&lt;settlestatus&gt;&lt;/settlestatus&gt;&lt;/settlement&gt; node from the Secure Trading response.</description>
        <label>Settlement - Settle Status Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TID__c</fullName>
        <label>Merchant - TID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Amount__c</fullName>
        <label>Transaction Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transaction Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transaction_Currency__c</fullName>
        <label>Transaction Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transaction_Description__c</fullName>
        <label>Transaction Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Reference__c</fullName>
        <description>The value of the &lt;transactionreference&gt;&lt;/transactionreference&gt; node from the Secure Trading response.</description>
        <label>Transaction Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X3D_Enrolled__c</fullName>
        <label>3D Enrolled</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3D_Secure_Response__c</fullName>
        <label>3D Secure Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cavv__c</fullName>
        <label>cavv</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eci__c</fullName>
        <label>eci</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>md__c</fullName>
        <label>md</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pares__c</fullName>
        <label>pares</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xid__c</fullName>
        <label>xid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Transaction Ref</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>